pwrp-interface-orig/rt_net.h

#define rt_net_h
/** Protocol version. Increase whenever an
    incompatible change is done to the protocol.
    Update supported features in function id() in file rt_neth.c  */

#define net_cVersion 8
 /** @note DO NOT change this number */
#define net_cFirstCclassVersion 8 /* first version with cached classes */
#define net_cSendRcvTmo 20000 /* Timeout (ms) used in pams_rcv_msgw calls */
#define net_cProcHandler 110
#define net_cMsgClass 200
#define net_cSizeSmall 600
#define net_cSizeMedium 5000
#define net_cSizeLarge 9900
enum net_eMsg {
	net_eMsg__ = -1,
	net_eMsg_error = 0,
	net_eMsg_id = 0 + 1,
	net_eMsg_idAck = 0 + 2,
	net_eMsg_idAck2 = 0 + 3,
	net_eMsg_volumes = 0 + 4,
	net_eMsg_volumesR = 0 + 5,
	net_eMsg_subAdd = 0 + 6,
	net_eMsg_subRemove = 0 + 7,
	net_eMsg_subData = 0 + 8,
	net_eMsg_sanAdd = 0 + 9,
	net_eMsg_sanRemove = 0 + 10,
	net_eMsg_sanUpdate = 0 + 11,
	net_eMsg_nameToObject = 0 + 12,
	net_eMsg_oidToObject = 0 + 13,
	net_eMsg_objectR = 0 + 14,
	net_eMsg_getObjectInfo = 0 + 15,
	net_eMsg_getObjectInfoR = 0 + 16,
	net_eMsg_setObjectInfo = 0 + 17,
	net_eMsg_setObjectInfoR = 0 + 18,
	net_eMsg_flush = 0 + 19,
	net_eMsg_createObject = 0 + 20,
	net_eMsg_deleteObject = 0 + 21,
	net_eMsg_moveObject = 0 + 22,
	net_eMsg_renameObject = 0 + 23,
	net_eMsg_nodeUp = 0 + 24,
	net_eMsg_nodeDown = 0 + 25,
	net_eMsg_getCclass = 0 + 26,
	net_eMsg_getCclassR = 0 + 27,
	net_eMsg_getGclass = 0 + 28,
	net_eMsg_getGclassR = 0 + 29,
	net_eMsg_serverConnect = 0 + 30,
	net_eMsg_fileList = 0 + 31,
	net_eMsg_fileListR = 0 + 32,
	net_eMsg_getCircBuffer = 0 + 33,
	net_eMsg_getCircBufferR = 0 + 34,
	net_eMsg_updateCircBuffer = 0 + 35,
	net_eMsg_updateCircBufferR = 0 + 36,
	net_eMsg_ = 0 + 37,
	net_eMsg_volumes7 = 0 + 38,
	net_eMsg_end = 0 + 39,
};
typedef enum net_eMsg net_eMsg;
enum net_eEvent {
	net_eEvent__ = -1,
	net_eEvent_nodeUp = 0,
	net_eEvent_nodeDown = 0 + 1,
	net_eEvent_id = 0 + 2,
	net_eEvent_idAck = 0 + 3,
	net_eEvent_idAck2 = 0 + 4,
	net_eEvent_error = 0 + 5,
	net_eEvent_other = 0 + 6,
	net_eEvent_ = 0 + 7,
};
typedef enum net_eEvent net_eEvent;
typedef union {
 pwr_tBitMask m;
 pwr_32Bits (
 pwr_Bits( linkStates , 1),
 pwr_Bits( id , 1),
 pwr_Bits( messages , 1),
 pwr_Bits( tmon , 1),
 pwr_Bits( cacheTrim , 1),
 pwr_Bits( sub , 1),
 pwr_Bits( san , 1),
 pwr_Bits( fill0 , 1),

 pwr_Bits( fill1 , 8),,,,,,,,
 pwr_Bits( fill2 , 8),,,,,,,,
 pwr_Bits( fill3 , 8),,,,,,,
 ) b;

#define net_mLog__ 0
#define net_mLog_linkStates pwr_Bit(0)
#define net_mLog_id pwr_Bit(1)
#define net_mLog_messages pwr_Bit(2)
#define net_mLog_tmon pwr_Bit(3)
#define net_mLog_cacheTrim pwr_Bit(4)
#define net_mLog_sub pwr_Bit(5)
#define net_mLog_san pwr_Bit(6)
#define net_mLog_ (~net_mLog__)

#define net_mLog_all net_mLog_
} net_mLog;
struct net_sMessage {
	pwr_tBoolean xdr;
	pwr_tUInt32 msn;
	pwr_tNodeId nid;
};
typedef struct net_sMessage net_sMessage;
struct net_sError {
	net_sMessage hdr;
	qcom_sQid remqid;
	pwr_tStatus sts;
};
typedef struct net_sError net_sError;
struct net_sNode {
	qcom_sQid handler;
	pwr_tUInt32 netver;
	pwr_tObjid nod_oid;
	pwr_tObjid vol_oid;
};
typedef struct net_sNode net_sNode;
struct net_sId {
	net_sMessage hdr;
	net_sNode node;
};
typedef struct net_sId net_sId;
struct net_sIdAck2 {
	net_sMessage hdr;
};
typedef struct net_sIdAck2 net_sIdAck2;
struct net_sNodeUp {
	net_sMessage hdr;
	pwr_tNodeId nid;
};
typedef struct net_sNodeUp net_sNodeUp;
enum net_eState {
	net_eState__ = -1,
	net_eState_down = -1 + 1,
	net_eState_istrt = -1 + 2,
	net_eState_astrt = -1 + 3,
	net_eState_up = -1 + 4,
	net_eState_ = -1 + 5,
};
typedef enum net_eState net_eState;
struct net_sClassDef {
	pwr_tInt32 Editor;
	pwr_tInt32 Method;
	pwr_tUInt32 Flags;
	pwr_tUInt32 NumOfObjBodies;
	pwr_tInt32 PopEditor;
};
typedef struct net_sClassDef net_sClassDef;
struct net_sObjBodyDef {
	pwr_tStructName StructName;
	pwr_tUInt32 NumOfParams;
	pwr_tUInt32 Size;
	pwr_tUInt32 NextAix;
	pwr_tUInt32 Flags;
};
typedef struct net_sObjBodyDef net_sObjBodyDef;
struct net_sParInfo {
	pwr_tPgmName PgmName;
	pwr_eType Type;
	pwr_tUInt32 Offset;
	pwr_tUInt32 Size;
	pwr_tUInt32 Flags;
	pwr_tUInt32 Elements;
	pwr_tUInt32 ParamIndex;
};
typedef struct net_sParInfo net_sParInfo;
struct net_sParam {
	net_sParInfo Info;
	pwr_tTypeId TypeRef;
};
typedef struct net_sParam net_sParam;
struct net_sSubSpec {
	pwr_tSubid sid;
	pwr_tUInt32 dt;
	pwr_tBoolean sub_by_name;
	pwr_sAttrRef aref;
};
typedef struct net_sSubSpec net_sSubSpec;
#define net_cSubMaxAdd (net_cSizeLarge/sizeof(net_sSubSpec))
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tUInt32 count pwr_dPacked; /* # of entries */
 net_sSubSpec spec[1]; /* Specifications (dynamic) */
} net_sSubAdd;
bool_t
xdr_net_sSubAdd();
/* Remove subscription.  */

#define net_cSubMaxRemove (net_cSizeLarge/sizeof(pwr_tSubid))
#define net_cSubMaxMessage 100
struct net_sSanEntry {
	pwr_tObjid oid;
	pwr_tSubid sid;
};
typedef struct net_sSanEntry net_sSanEntry;
#define net_cSanMaxAdd (net_cSizeLarge/sizeof(net_sSanEntry))
#define net_cSanMaxRemove (net_cSizeLarge/sizeof(pwr_tSubid))
struct net_sAlarm {
	pwr_tUInt32 a;
	pwr_tUInt32 b;
	pwr_tUInt32 maxa;
	pwr_tUInt32 maxb;
	pwr_tUInt32 idx;
};
typedef struct net_sAlarm net_sAlarm;
struct net_sSanData {
	net_sSanEntry sane;
	net_sAlarm al;
};
typedef struct net_sSanData net_sSanData;
#define net_cSanMaxUpdate (net_cSizeLarge/sizeof(net_sSanData))
typedef union {
 pwr_tBitMask m;
 pwr_32Bits (
 pwr_Bits( isParent , 1),
 pwr_Bits( isAliasClient , 1),
 pwr_Bits( isAliasServer , 1),
 pwr_Bits( isMountClient , 1),
 pwr_Bits( inSibList , 1),
 pwr_Bits( hasSubClass , 1),
 pwr_Bits( fill0 , 2),,

 pwr_Bits( fill1 , 8),,,,,,,,
 pwr_Bits( fill2 , 8),,,,,,,,
 pwr_Bits( fill3 , 8),,,,,,,
 ) b;

#define net_mGo__ 0
#define net_mGo_isParent pwr_Bit(0)
#define net_mGo_isAliasClient pwr_Bit(1)
#define net_mGo_isAliasServer pwr_Bit(2)
#define net_mGo_isMountClient pwr_Bit(3)
#define net_mGo_inSibList pwr_Bit(4)
#define net_mGo_hasSubClass pwr_Bit(5)

#define net_mGo_isClient (net_mGo_isAliasClient|net_mGo_isMountClient)

#define net_mGo_ (~net_mGo__)
} net_mGo;
struct net_sOixLink {
	pwr_tObjectIx flink;
	pwr_tObjectIx blink;
};
typedef struct net_sOixLink net_sOixLink;
struct net_sGobject {
	pwr_tObjid oid;
	pwr_tClassId cid;
	cdh_sFamily f;
	net_sOixLink sib;
	pwr_tObjid soid;
	pwr_tUInt32 size;
	net_mGo flags;
};
typedef struct net_sGobject net_sGobject;
#define net_cObjectMaxCount (net_cSizeLarge/sizeof(net_sGobject))
struct net_sTime {
	u_int tv_sec;
	u_int tv_nsec;
};
typedef struct net_sTime net_sTime;
struct net_sGvolume {
	pwr_tVolumeId vid;
	pwr_tObjid oid;
	cdh_sObjName name;
	pwr_tClassId cid;
	pwr_tNodeId nid;
	net_sTime time;
};
typedef struct net_sGvolume net_sGvolume;
#define net_cVolumeMaxCount (net_cSizeLarge/sizeof(net_sGvolume))