pwrp-interface-orig/rt_net_h.ads

pragma Ada_2005;
pragma Style_Checks (Off);

with Interfaces.C; use Interfaces.C;
with Interfaces.C.Extensions;
with pwr_h;
with rt_qcom_h;
with pwr_class_h;
with rpc_types_h;
with co_cdh_h;
with sys_types_h;
limited with rpc_xdr_h;
with System;
with Interfaces.C.Strings;
limited with netinet_in_h;

package rt_net_h is


   net_cVersion : constant := 8;  --  rt_net.h:62

   net_cFirstCclassVersion : constant := 8;  --  rt_net.h:65

   net_cSendRcvTmo : constant := 20000;  --  rt_net.h:67
   net_cProcHandler : constant := 110;  --  rt_net.h:68
   net_cMsgClass : constant := 200;  --  rt_net.h:69

   net_cSizeSmall : constant := 600;  --  rt_net.h:71
   net_cSizeMedium : constant := 5000;  --  rt_net.h:72
   net_cSizeLarge : constant := 9900;  --  rt_net.h:73

   net_mLog_u_u : constant := 0;  --  rt_net.h:151
   --  unsupported macro: net_mLog_linkStates pwr_Bit(0)
   --  unsupported macro: net_mLog_id pwr_Bit(1)
   --  unsupported macro: net_mLog_messages pwr_Bit(2)
   --  unsupported macro: net_mLog_tmon pwr_Bit(3)
   --  unsupported macro: net_mLog_cacheTrim pwr_Bit(4)
   --  unsupported macro: net_mLog_sub pwr_Bit(5)
   --  unsupported macro: net_mLog_san pwr_Bit(6)
   --  unsupported macro: net_mLog_ (~net_mLog__)
   --  unsupported macro: net_mLog_all net_mLog_
   --  unsupported macro: net_cSubMaxAdd (net_cSizeLarge/sizeof(net_sSubSpec))
   --  unsupported macro: net_cSubMaxRemove (net_cSizeLarge/sizeof(pwr_tSubid))

   net_cSubMaxMessage : constant := 100;  --  rt_net.h:290
   --  unsupported macro: net_cSanMaxAdd (net_cSizeLarge/sizeof(net_sSanEntry))
   --  unsupported macro: net_cSanMaxRemove (net_cSizeLarge/sizeof(pwr_tSubid))
   --  unsupported macro: net_cSanMaxUpdate (net_cSizeLarge/sizeof(net_sSanData))

   net_mGo_u_u : constant := 0;  --  rt_net.h:390
   --  unsupported macro: net_mGo_isParent pwr_Bit(0)
   --  unsupported macro: net_mGo_isAliasClient pwr_Bit(1)
   --  unsupported macro: net_mGo_isAliasServer pwr_Bit(2)
   --  unsupported macro: net_mGo_isMountClient pwr_Bit(3)
   --  unsupported macro: net_mGo_inSibList pwr_Bit(4)
   --  unsupported macro: net_mGo_hasSubClass pwr_Bit(5)
   --  unsupported macro: net_mGo_isClient (net_mGo_isAliasClient|net_mGo_isMountClient)
   --  unsupported macro: net_mGo_ (~net_mGo__)
   --  unsupported macro: net_cObjectMaxCount (net_cSizeLarge/sizeof(net_sGobject))
   --  unsupported macro: net_cVolumeMaxCount (net_cSizeLarge/sizeof(net_sGvolume))

  -- * Please do not edit this file.
  -- * It was generated using rpcgen.
  --  

  -- 
  -- * Proview   $Id: rt_net.x,v 1.13 2008-06-24 07:14:53 claes Exp $
  -- * Copyright (C) 2005 SSAB Oxelösund AB.
  -- *
  -- * This program is free software; you can redistribute it and/or 
  -- * modify it under the terms of the GNU General Public License as 
  -- * published by the Free Software Foundation, either version 2 of 
  -- * the License, or (at your option) any later version.
  -- *
  -- * This program is distributed in the hope that it will be useful 
  -- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
  -- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
  -- * GNU General Public License for more details.
  -- *
  -- * You should have received a copy of the GNU General Public License 
  -- * along with the program, if not, write to the Free Software 
  -- * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  --  

  --* Protocol version. Increase whenever an
  --    incompatible change is done to the protocol.
  --    Update supported features in function id() in file rt_neth.c   

  --* @note DO NOT change this number  
   subtype net_eMsg is unsigned;
   net_eMsg_u_u : constant net_eMsg := -1;
   net_eMsg_error : constant net_eMsg := 0;
   net_eMsg_id : constant net_eMsg := 1;
   net_eMsg_idAck : constant net_eMsg := 2;
   net_eMsg_idAck2 : constant net_eMsg := 3;
   net_eMsg_volumes : constant net_eMsg := 4;
   net_eMsg_volumesR : constant net_eMsg := 5;
   net_eMsg_subAdd : constant net_eMsg := 6;
   net_eMsg_subRemove : constant net_eMsg := 7;
   net_eMsg_subData : constant net_eMsg := 8;
   net_eMsg_sanAdd : constant net_eMsg := 9;
   net_eMsg_sanRemove : constant net_eMsg := 10;
   net_eMsg_sanUpdate : constant net_eMsg := 11;
   net_eMsg_nameToObject : constant net_eMsg := 12;
   net_eMsg_oidToObject : constant net_eMsg := 13;
   net_eMsg_objectR : constant net_eMsg := 14;
   net_eMsg_getObjectInfo : constant net_eMsg := 15;
   net_eMsg_getObjectInfoR : constant net_eMsg := 16;
   net_eMsg_setObjectInfo : constant net_eMsg := 17;
   net_eMsg_setObjectInfoR : constant net_eMsg := 18;
   net_eMsg_flush : constant net_eMsg := 19;
   net_eMsg_createObject : constant net_eMsg := 20;
   net_eMsg_deleteObject : constant net_eMsg := 21;
   net_eMsg_moveObject : constant net_eMsg := 22;
   net_eMsg_renameObject : constant net_eMsg := 23;
   net_eMsg_nodeUp : constant net_eMsg := 24;
   net_eMsg_nodeDown : constant net_eMsg := 25;
   net_eMsg_getCclass : constant net_eMsg := 26;
   net_eMsg_getCclassR : constant net_eMsg := 27;
   net_eMsg_getGclass : constant net_eMsg := 28;
   net_eMsg_getGclassR : constant net_eMsg := 29;
   net_eMsg_serverConnect : constant net_eMsg := 30;
   net_eMsg_fileList : constant net_eMsg := 31;
   net_eMsg_fileListR : constant net_eMsg := 32;
   net_eMsg_getCircBuffer : constant net_eMsg := 33;
   net_eMsg_getCircBufferR : constant net_eMsg := 34;
   net_eMsg_updateCircBuffer : constant net_eMsg := 35;
   net_eMsg_updateCircBufferR : constant net_eMsg := 36;
   net_eMsg_u : constant net_eMsg := 37;
   net_eMsg_volumes7 : constant net_eMsg := 38;
   net_eMsg_end : constant net_eMsg := 39;  -- rt_net.h:77

   subtype net_eEvent is unsigned;
   net_eEvent_u_u : constant net_eEvent := -1;
   net_eEvent_nodeUp : constant net_eEvent := 0;
   net_eEvent_nodeDown : constant net_eEvent := 1;
   net_eEvent_id : constant net_eEvent := 2;
   net_eEvent_idAck : constant net_eEvent := 3;
   net_eEvent_idAck2 : constant net_eEvent := 4;
   net_eEvent_error : constant net_eEvent := 5;
   net_eEvent_other : constant net_eEvent := 6;
   net_eEvent_u : constant net_eEvent := 7;  -- rt_net.h:122

   type net_mLog;
   type anon_126 is record
      linkStates : Extensions.Unsigned_1;  -- rt_net.h:136
      id : Extensions.Unsigned_1;  -- rt_net.h:136
      messages : Extensions.Unsigned_1;  -- rt_net.h:136
      tmon : Extensions.Unsigned_1;  -- rt_net.h:136
      cacheTrim : Extensions.Unsigned_1;  -- rt_net.h:136
      sub : Extensions.Unsigned_1;  -- rt_net.h:136
      san : Extensions.Unsigned_1;  -- rt_net.h:136
      fill0 : Extensions.Unsigned_1;  -- rt_net.h:136
      fill1 : aliased unsigned_char;  -- rt_net.h:136
      fill2 : aliased unsigned_char;  -- rt_net.h:136
      fill3 : aliased unsigned_char;  -- rt_net.h:136
   end record;
   pragma Convention (C_Pass_By_Copy, anon_126);
   type net_mLog (discr : unsigned := 0) is record
      case discr is
         when 0 =>
            m : aliased pwr_h.pwr_tBitMask;  -- rt_net.h:135
         when others =>
            b : aliased anon_126;  -- rt_net.h:149
      end case;
   end record;
   pragma Convention (C_Pass_By_Copy, net_mLog);
   pragma Unchecked_Union (net_mLog);  -- rt_net.h:162

   --  skipped anonymous struct anon_125

   type net_sMessage is record
      xdr : aliased pwr_h.pwr_tBoolean;  -- rt_net.h:166
      msn : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:167
      nid : aliased pwr_h.pwr_tNodeId;  -- rt_net.h:168
   end record;
   pragma Convention (C_Pass_By_Copy, net_sMessage);  -- rt_net.h:165

   type net_sError is record
      hdr : aliased net_sMessage;  -- rt_net.h:173
      remqid : aliased rt_qcom_h.qcom_sQid;  -- rt_net.h:174
      sts : aliased pwr_h.pwr_tStatus;  -- rt_net.h:175
   end record;
   pragma Convention (C_Pass_By_Copy, net_sError);  -- rt_net.h:172

   type net_sNode is record
      handler : aliased rt_qcom_h.qcom_sQid;  -- rt_net.h:180
      netver : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:181
      nod_oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:182
      vol_oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:183
   end record;
   pragma Convention (C_Pass_By_Copy, net_sNode);  -- rt_net.h:179

   type net_sId is record
      hdr : aliased net_sMessage;  -- rt_net.h:188
      node : aliased net_sNode;  -- rt_net.h:189
   end record;
   pragma Convention (C_Pass_By_Copy, net_sId);  -- rt_net.h:187

   type net_sIdAck2 is record
      hdr : aliased net_sMessage;  -- rt_net.h:194
   end record;
   pragma Convention (C_Pass_By_Copy, net_sIdAck2);  -- rt_net.h:193

   type net_sNodeUp is record
      hdr : aliased net_sMessage;  -- rt_net.h:199
      nid : aliased pwr_h.pwr_tNodeId;  -- rt_net.h:200
   end record;
   pragma Convention (C_Pass_By_Copy, net_sNodeUp);  -- rt_net.h:198

   subtype net_eState is unsigned;
   net_eState_u_u : constant net_eState := -1;
   net_eState_down : constant net_eState := 0;
   net_eState_istrt : constant net_eState := 1;
   net_eState_astrt : constant net_eState := 2;
   net_eState_up : constant net_eState := 3;
   net_eState_u : constant net_eState := 4;  -- rt_net.h:204

   type net_sClassDef is record
      Editor : aliased pwr_h.pwr_tInt32;  -- rt_net.h:215
      Method : aliased pwr_h.pwr_tInt32;  -- rt_net.h:216
      Flags : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:217
      NumOfObjBodies : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:218
      PopEditor : aliased pwr_h.pwr_tInt32;  -- rt_net.h:219
   end record;
   pragma Convention (C_Pass_By_Copy, net_sClassDef);  -- rt_net.h:214

   type net_sObjBodyDef is record
      StructName : aliased pwr_h.pwr_tStructName;  -- rt_net.h:224
      NumOfParams : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:225
      Size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:226
      NextAix : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:227
      Flags : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:228
   end record;
   pragma Convention (C_Pass_By_Copy, net_sObjBodyDef);  -- rt_net.h:223

   type net_sParInfo is record
      PgmName : aliased pwr_h.pwr_tPgmName;  -- rt_net.h:233
      c_Type : aliased pwr_class_h.pwr_eType;  -- rt_net.h:234
      Offset : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:235
      Size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:236
      Flags : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:237
      Elements : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:238
      ParamIndex : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:239
   end record;
   pragma Convention (C_Pass_By_Copy, net_sParInfo);  -- rt_net.h:232

   type net_sParam is record
      Info : aliased net_sParInfo;  -- rt_net.h:244
      TypeRef : aliased pwr_h.pwr_tTypeId;  -- rt_net.h:245
   end record;
   pragma Convention (C_Pass_By_Copy, net_sParam);  -- rt_net.h:243

   type net_sSubSpec is record
      sid : aliased pwr_h.pwr_tSubid;  -- rt_net.h:250
      dt : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:251
      sub_by_name : aliased pwr_h.pwr_tBoolean;  -- rt_net.h:252
      aref : aliased pwr_h.pwr_sAttrRef;  -- rt_net.h:253
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSubSpec);  -- rt_net.h:249

  -- Header  
   type net_sSubAdd_spec_array is array (0 .. 0) of aliased net_sSubSpec;
   type net_sSubAdd is record
      hdr : aliased net_sMessage;  -- rt_net.h:259
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:260
      spec : aliased net_sSubAdd_spec_array;  -- rt_net.h:261
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSubAdd);  -- rt_net.h:262

   --  skipped anonymous struct anon_127

  -- # of entries  
  -- Specifications (dynamic)  
   function xdr_net_sSubAdd return rpc_types_h.bool_t;  -- rt_net.h:265
   pragma Import (C, xdr_net_sSubAdd, "xdr_net_sSubAdd");
